# image-generation-factory

./: .env.example  .gitignore  README.md  categories.txt  config.py  fooocus.py  gemeni.py  local.py  main.py  mypy.ini  ollama.py  pyproject.toml  ruff.toml  services.py  settings.py  todo
artists/: artist_banana.py  artist_fooocus.py  base_artist.py
brains/: base_brain.py  brain_gemini.py  brain_ollama.py
core/: csv_manager.py  mappers.py  models.py  pipeline.py  services.py
core/pipeline/: base.py  meta.py  wildcard.py
logging_system/: logger_config.py  prompt_logger.py
prompts/: config_manager.py  instruction_manager.py  prompt_manager.py  wildcard_manager.py
prompts/instructions/: json_instruction.txt  sdxl_instruction.txt
