[project]
name = "image-generation-factory"
version = "0.1.0"
description = "Batch image generation using llms and a image generation AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.53.0",
    "loguru>=0.7.3",
    "path>=17.1.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "types-requests>=2.32.4.20250913",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
